# emotion-driven-music-creation

./: README.md
client/: pnpm-lock.yaml
client/src/Types/: index.ts
client/src/app/: page.tsx
client/src/components/: CameraStreamApp.tsx  SettingsPanel.tsx  StatusIndicator.tsx
server/: .example.env  .gitignore  main.py  pyproject.toml
server/app/: __init__.py  api.py  config.py  websocket.py
server/app/models/: mood_detector.py
server/app/services/: frame_processor.py  music_service.py
server/data/: songs.json
